$Id: History,v 1.20 2001-04-20 20:13:52 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 20, 2001  G. Cosmo                   geommng-V03-01-00
- Migration to STL vector:
  o G4VSolid: migrated G4ThreeVectorList typedef.
  o G4SolidStore, G4LogicalVolumeStore, G4PhysicalVolumeStore: migrated
    inheritance from base collection of pointers.
  o G4LogicalVolume: migrated data member "fDaughters".
  o G4SmartVoxelHeader: migrated typedefs G4ProxyVector, G4NodeVector,
    G4VolumeNosVector and G4VolumeExtentVector.
  o G4SmartVoxelNode: migrated G4SliceVector typedef.

March 07, 2001  G. Cosmo                   geommng-V03-00-01
- G4PVPlacement.hh: corrected comments to constructor with G4RotationMatrix*
  as argument, to correspond to specifications in the User's Manual.
- G4AssemblyVolume.cc: corrected comments about unique PV identifiers
  (by R.Chytracek).

February 07, 2001  G. Cosmo                geommng-V03-00-00
- Introduced first implementation of G4AssemblyVolume, a helper class to
  combine several volumes together in an arbitrary way in the 3D space.
  Added files: G4AssemblyVolume[.hh.icc.cc], G4AssemblyTriplet[.hh.icc]
  (by R.Chytracek).