@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VoxelNavigation.icc,v 1.5 2001-04-17 14:44:25 gcosmo Exp $
+// $Id: G4VoxelNavigation.icc,v 1.6 2001-04-27 14:19:35 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -14,13 +14,13 @@
 inline
 G4VoxelNavigation::G4VoxelNavigation()
   : fVoxelDepth(-1),
-    fVoxelAxisStack(kNavigatorVoxelStackMax),
-    fVoxelNoSlicesStack(kNavigatorVoxelStackMax),
-    fVoxelSliceWidthStack(kNavigatorVoxelStackMax),
-    fVoxelNodeNoStack(kNavigatorVoxelStackMax),
     fVoxelHeaderStack(kNavigatorVoxelStackMax,(G4SmartVoxelHeader*)0),
     fVoxelNode(0)
 {
+	fVoxelAxisStack.reserve(kNavigatorVoxelStackMax);
+	fVoxelNoSlicesStack.reserve(kNavigatorVoxelStackMax);
+	fVoxelSliceWidthStack.reserve(kNavigatorVoxelStackMax);
+	fVoxelNodeNoStack.reserve(kNavigatorVoxelStackMax);
 }
 
 inline
