@@ -1,4 +1,4 @@
-$Id: History,v 1.36 2001-04-20 20:18:45 gcosmo Exp $
+$Id: History,v 1.37 2001-04-27 14:19:35 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+April 27th, 2001     G. Cosmo - geomvol-V03-01-02
+- G4VoxelNavigation.icc: fixed compilation warnings on HP-UX, concerning
+  potential uninitialised vector elements.
 
 April 20th, 2001     G. Cosmo - geomvol-V03-01-01
 - Updated unit tests to conform to recent STL vector migration.
