@@ -1,4 +1,4 @@
-$Id: History,v 1.20 2001-04-20 20:13:52 gcosmo Exp $
+$Id: History,v 1.21 2001-04-27 14:18:19 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+April 27, 2001  G. Cosmo                   geommng-V03-01-01
+- G4LogicalVolume.cc, G4SmartVoxelHeader.cc: fixed compilation warnings
+  on HP-UX, concerning potential uninitialised vector elements.
 
 April 20, 2001  G. Cosmo                   geommng-V03-01-00
 - Migration to STL vector:
